--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" />
+    <title>Homework</title>
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="/main.js"></script>
+    <!--Links for pages-->
+    <ul>
+      <li>
+        <a href="./01-gallery.html"
+          ><button class="custom-btn btn-1" type="button">
+            <span>Image gallery</span>
+          </button></a
+        >
+      </li>
+      <li>
+        <a href="./02-video.html"
+          ><button class="custom-btn btn-2" type="button">
+            <span>Video playback</span>
+          </button></a
+        >
+      </li>
+      <li>
+        <a href="./03-feedback.html"
+          ><button class="custom-btn btn-3" type="button">
+            <span>Feedback form</span>
+          </button></a
+        >
+      </li>
+    </ul>
   </body>
 </html>
