--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <title>SimpleLightbox library</title>
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/01-gallery.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/01-gallery.css" />
   </head>
   <body>
     <p>
-      <a href="./index.html"
+      <a href="index.html"
         ><button class="go-back-btn custom-btn btn-4" type="button">
           <span>Go back</span>
         </button></a
@@ -21,6 +21,6 @@
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
 
-    <script src="./js/01-gallery.js" type="module"></script>
+    <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
