--- a/src/02-video.html
+++ b/src/02-video.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <title>Video playback</title>
-    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
     <p>
-      <a href="./index.html"
+      <a href="index.html"
         ><button class="go-back-btn custom-btn btn-4" type="button">
           <span>Go back</span>
         </button></a
@@ -27,6 +27,6 @@
         allow="autoplay; encrypted-media"
       ></iframe>
     </div>
-    <script src="./js/02-video.js" type="module"></script>
+    <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
