--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <title>Feedback form</title>
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/03-feedback.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/03-feedback.css" />
   </head>
   <body>
     <p>
-      <a href="./index.html"
+      <a href="index.html"
         ><button class="go-back-btn custom-btn btn-4" type="button">
           <span>Go back</span>
         </button></a
@@ -32,6 +32,6 @@
         </button>
       </form>
     </div>
-    <script src="./js/03-feedback.js" type="module"></script>
+    <script src="js/03-feedback.js" type="module"></script>
   </body>
 </html>
