--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/favicon.ico" />
-    <title>Homework 8</title>
+    <title>JS</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <!--Links for pages-->
     <ul>
       <li>
         <a href="01-gallery.html"
