--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" />
+    <link rel="shortcut icon" href="./img/favicon.ico" />
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/01-gallery.css" />
@@ -17,7 +17,7 @@
         </button></a
       >
     </p>
-    <div class="gallery"></div>
+    <ul class="gallery"></ul>
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
