--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" />
-    <title>JS</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" />
+    <title>Advanced JS</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
